--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- 111 -->
-    <!-- 222 -->
-    <!-- 333 -->
+    <div>小马</div>
   </body>
 </html>
